package(default_visibility=["//visibility:public"])
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "jasmine_node_test")

ts_library(
    name = "by",
    srcs = [
        "locator.ts",
        "protractor_by.ts",
        "webdriver_by.ts",
    ],
    data = [
        "//lib/client_side:finders",
    ],
    deps = [
        "@npm//@types/node",
        "@npm//@types/selenium-webdriver",
        "@npm//selenium-webdriver",
    ],
)

ts_library(
    name = "by_unit_spec",
    srcs = [
        "protractor_by.unit-spec.ts"
    ],
    data = [
        "//lib/client_side:finders",
    ],
    deps = [
        ":by",
        "@npm//@types/jasmine",
        "@npm//@types/node",
        "@npm//jasmine",
    ]
)

ts_library(
    name = "by_int_spec",
    srcs = [
        "protractor_by.int-spec.ts"
    ],
    data = [
        "//lib/client_side:finders",
    ],
    deps = [
        # missing browser, element, test_utils
        "@npm//@types/jasmine",
        "@npm//@types/loglevel",
        "@npm//@types/node",
        "@npm//jasmine",
        "@npm//loglevel",
        "@npm//webdriver-manager-replacement",
        ":by",
        "//lib/browser",
        "//lib/element",
    ],
)

ts_library(
    name = "by_types_spec",
    srcs = [
        "webdriver_by.types-spec.ts"
    ],
    deps = [
        ":by",
        "@npm//@types/jasmine",
        "@npm//@types/loglevel",
        "@npm//@types/node",
        "@npm//@types/selenium-webdriver",
        "@npm//jasmine",
        "@npm//loglevel",
        "@npm//selenium-webdriver",
        "@npm//webdriver-manager-replacement",
    ],
)

jasmine_node_test(
    name = "by_unit_test",
    data = ["//lib/client_side:finders"],
    deps = [
        ":by",
        ":by_unit_spec",
        "@npm//jasmine",
    ]
)
