package(default_visibility=["//visibility:public"])
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "jasmine_node_test")

ts_library(
    name = "element",
    srcs = [
        "index.ts",
    ],
    deps = [
        ":element_finder",
        "//lib/browser",
        "//lib/by",
        "//lib/element/all",
    ],
)

ts_library(
    name = "element_finder",
    srcs = [
        "element_finder.ts",
    ],
    data = [
        "//lib/client_side:finders",
    ],
    deps = [
        "@npm//@types/selenium-webdriver",
        "@npm//selenium-webdriver",
        ":get_web_elements",
        "//lib/browser",
        "//lib/by",
        "//lib:wait",
    ],
)

ts_library(
    name = "get_web_elements",
    srcs = [
        "get_web_elements.ts",
    ],
    deps = [
        "@npm//@types/selenium-webdriver",
        "@npm//selenium-webdriver",
    ],
)

# Unit tests

ts_library(
    name = "element_finder_unit_spec",
    srcs = [
        "element_finder.unit-spec.ts",
        "index.unit-spec.ts",
    ],
    deps = [
        "@npm//@types/jasmine",
        "@npm//@types/loglevel",
        "@npm//@types/node",
        "@npm//@types/selenium-webdriver",
        "@npm//jasmine",
        "@npm//loglevel",
        "@npm//selenium-webdriver",
        "//lib/browser",
        ":element",
        ":element_finder",
    ],
)

jasmine_node_test(
    name = "element_finder_unit_test",
    deps = [
        "@npm//jasmine",
        ":element_finder_unit_spec",
    ]
)