package(default_visibility=["//visibility:public"])
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "jasmine_node_test")

ts_library(
    name = "http_server",
    srcs = [
      "env.ts",
      "http_server.ts",
    ],
    deps = [
        "@npm//@types/node",
    ],
)
