package(default_visibility=["//visibility:public"])
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "jasmine_node_test")

ts_library(
    name = "http_utils",
    srcs = ["http_utils.ts"],
    deps = [
        "@npm//@types/loglevel",
        "@npm//@types/node",
        "@npm//@types/request",
        "@npm//loglevel",
        "@npm//request",
    ],
)

ts_library(
    name = "test_utils",
    srcs = ["test_utils.ts"],
    deps = [
        "@npm//@types/loglevel",
        "@npm//@types/node",
        "@npm//loglevel",
        ":http_utils",
    ],
)

ts_library(
    name = "wdm_options",
    srcs = ["wdm_options.ts"],
    deps = [
        "@npm//webdriver-manager-replacement",
    ],
)