package(default_visibility=["//visibility:public"])
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "jasmine_node_test")

ts_library(
    name = "browser",
    srcs = [
        "browser.ts",
        "index.ts",
    ],
    deps = [
        "@npm//@types/selenium-webdriver",
        "@npm//selenium-webdriver",
        ":browser_config",
        "//lib/core:wait",
    ],
)

ts_library(
    name = "browser_config",
    srcs = ["browser_config.ts"],
)

ts_library(
    name = "browser_int_spec",
    srcs = [
        "browser.int-spec.ts",
    ],
    data = [
        "//:downloads",
    ],
    deps = [
        "@npm//@types/jasmine",
        "@npm//@types/node",
        "@npm//jasmine",
        "@npm//webdriver-manager-replacement",
        ":browser",
        "//spec/server:http_server",
        "//spec/support:test_utils",
        "//spec/support:wdm_options",
    ],
)

jasmine_node_test(
    name = "browser_int_test",
    deps = [
        ":browser_int_spec",
        "@npm//jasmine",
    ]
)