package(default_visibility=["//visibility:public"])
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "jasmine_node_test")

ts_library(
    name = "by",
    srcs = [
        "locator.ts",
        "protractor_by.ts",
        "webdriver_by.ts",
    ],
    data = [
        "//lib/core/client_side:finders",
    ],
    deps = [
        "@npm//@types/node",
        "@npm//@types/selenium-webdriver",
        "@npm//selenium-webdriver",
    ],
)

# Unit tests

ts_library(
    name = "by_unit_spec",
    srcs = [
        "protractor_by.unit-spec.ts"
    ],
    deps = [
        ":by",
        "@npm//@types/jasmine",
        "@npm//@types/node",
        "@npm//jasmine",
    ],
)

jasmine_node_test(
    name = "by_unit_test",
    deps = [
        ":by_unit_spec",
        "@npm//jasmine",
    ],
)

# Type definition tests

ts_library(
    name = "by_types_spec",
    srcs = [
        "webdriver_by.types-spec.ts"
    ],
    deps = [
        ":by",
        "@npm//@types/jasmine",
        "@npm//@types/loglevel",
        "@npm//@types/node",
        "@npm//@types/selenium-webdriver",
        "@npm//jasmine",
        "@npm//loglevel",
        "@npm//selenium-webdriver",
    ],
)

jasmine_node_test(
    name = "by_types_test",
    deps = [
        ":by_types_spec",
        "@npm//jasmine",
    ]
)

ts_library(
    name = "by_int_spec",
    srcs = [
        "protractor_by.int-spec.ts"
    ],
    data = [
        "//:downloads",
    ],
    deps = [
        "@npm//@types/jasmine",
        "@npm//@types/loglevel",
        "@npm//@types/node",
        "@npm//jasmine",
        "@npm//loglevel",
        "@npm//webdriver-manager-replacement",
        ":by",
        "//lib/core/browser",
        "//lib/core/element",
        "//spec/server:http_server",
        "//spec/support:test_utils",
    ],
)

jasmine_node_test(
    name = "by_int_test",
    deps = [
        ":by_int_spec",
        "@npm//jasmine",
    ]
)