package(default_visibility=["//visibility:public"])
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "jasmine_node_test")

ts_library(
    name = "all",
    srcs = [
        "element_array_finder.ts",
        "index.ts",
    ],
    data = [
        "//lib/core/client_side:finders",
    ],
    deps = [
        "@npm//@types/selenium-webdriver",
        "@npm//selenium-webdriver",
        "//lib/core/element:get_web_elements",
        "//lib/core/browser",
        "//lib/core/by",
    ],
)